# luban

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  release.yml
crates/gpui_ghostty_terminal/: Cargo.toml
crates/luban_app/: Cargo.toml
crates/luban_cli/: Cargo.toml
crates/luban_cli/src/: main.rs
crates/luban_domain/: Cargo.toml
crates/luban_ui/: Cargo.toml
crates/luban_ui/src/: lib.rs  root.rs  terminal_panel.rs  theme.rs
crates/luban_ui/src/root/: chat_input.rs  dashboard.rs  gh.rs  right_pane.rs  sidebar.rs  tests.rs  thread_tabs.rs  titlebar.rs
crates/luban_ui/src/root/chat/: composer_view.rs
design/: README.md  package.json
dev/: Cargo.toml
dev/src/: main.rs
dev/tests/: justfile_dev_mock_env.rs  web_chat_rendering_has_no_mock_mode_branches.rs  web_mock_create_workspace_is_two_phase.rs  web_mock_task_execute_creates_workspace.rs  web_sidebar_project_vm_uses_project_id.rs  web_store_refs_are_sync.rs
docs/: README.md  agent-cancel-resume.md  agent-runner-integration.md  agent-thread-events.md  amp-support.md  context-tokens.md  cs-web-architecture.md  cs-web-quickstart.md  decisions.md  persistence.md  release-ci.md  task-and-turn-status.md  ui-design-parity.md  ui-testing.md  workspace-thread-tabs.md
postmortem/: 2026-01-task-prompts-repo-specific-assumptions.md  2026-02-task-list-project-avatar-inconsistency.md  README.md
tools/: bootstrap-zig.sh  git-lock.sh
web/: .gitignore  AGENTS.md  eslint.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml
web/app/: globals.css  (+3 more)
(+255 files in other folders)
